# ecore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
ealloc/: Cargo.toml  README.md
ealloc/src/: dv.rs  first_fit.rs  half_tree.rs  lib.rs  ptr.rs  tlsf.rs
ealloc/src/block/: joint.rs  mod.rs  simple.rs  validator.rs
ealloc/tests/: alloc.rs
ecore/: Cargo.toml  README.md
ecore-macro/: Cargo.toml  README.md
ecore-macro/src/: bitfld.rs  iter_enum.rs  lib.rs  map_enum.rs  rint.rs
ecore-macro/src/bitfld/: bitenum.rs  bitstruct.rs
ecore/src/: ary_or_slc.rs  lib.rs  map_enum.rs  nbool.rs  range.rs
ecore/src/bitfld/: array.rs  const_op.rs  dynref.rs  mod.rs  seg2.rs  tag_union.rs
ecore/src/bitint/: alias.rs  compat.rs  mod.rs  non_zero.rs
ecore/src/int/: base_impl.rs  bits_op.rs  cint.rs  mod.rs  ranged.rs  varint.rs
ecore/src/map_enum/: iter.rs
ecore/src/repr/: mod.rs  unchecked.rs
ecore/tests/: bitfld.rs  bitint.rs  cint_cast.rs  int_cast.rs  range.rs
