[package]
name = "ealloc"
version = "0.10.0"
edition = "2024"
rust-version = "1.87.0"
description = "no_std memory allocator with pluggable free-block management strategies (TLSF, first-fit, half-tree)"
license = "MIT"
repository = "https://github.com/pbl-pw/ecore"
documentation = "https://docs.rs/ealloc"
keywords = ["allocator", "no-std", "embedded", "tlsf", "first-fit"]
categories = ["embedded", "no-std", "memory-management"]
readme = "README.md"

[dependencies]
ecore = { version = "0.10.0", path = "../ecore" }
const-default = { version = "1", default-features = false }
rand = { version = "0", optional = true }

[dev-dependencies]
portable-atomic = "1"
ealloc = { path = ".", features = ["test-utils"] }

[features]
std = []
# Internal test utilities, not part of public API
test-utils = ["std", "dep:rand"]
