[package]
name = "ecore-macro"
version = "0.10.0"
edition = "2024"
rust-version = "1.87.0"
description = "Procedural macros for ecore: bitfield structs/enums, enum maps, and ranged integers"
license = "MIT"
repository = "https://github.com/pbl-pw/ecore"
documentation = "https://docs.rs/ecore-macro"
keywords = ["bitfield", "enum", "map", "proc-macro", "no-std"]
categories = ["embedded", "no-std", "rust-patterns"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"


